--- a/Web/Partials/Login.html
+++ b/Web/Partials/Login.html
@@ -1,112 +1,99 @@
 ﻿<!-- ========== TITLE START ========== -->
-<div ng-controller="LoginController">
-    <div class="title">
-        <div class="title-image"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                    Log In
+<div class="title">
+    <div class="title-image"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                Log In
 				
-                </div>
             </div>
         </div>
     </div>
+</div>
 
-    <!-- ========== TITLE END ========== -->
+<!-- ========== TITLE END ========== -->
 
-    <!-- ========== CONTENT START ========== -->
+<!-- ========== CONTENT START ========== -->
 
-    <section id="content">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h1>Log In</h1>
-                    <h3>Already a Member? Log in here.</h3>
-                    <form role="form" name="login-form" id="login-form">
-                        <div class="form-group" id="login-login-group">
-                            <label for="login-input-login">Login</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" id="login-input-login" placeholder="Username or email">
-                                <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                            </div>
+<section id="content">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h1>Log In</h1>
+                <h3>Already a Member? Log in here.</h3>
+                <form role="form" name="login-form" id="login-form">
+                    <div class="form-group" id="login-login-group">
+                        <label for="login-input-login">Login</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="login-input-login" placeholder="Username or email">
+                            <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
-                        <div class="form-group" id="login-password-group">
-                            <label for="login-input-password">Password</label>
-                            <div class="input-group">
-                                <input type="password" class="form-control" id="login-input-password" placeholder="&#149;&#149;&#149;&#149;&#149;&#149;&#149;&#149;">
-                                <div class="input-group-addon"><i class="fa fa-lock"></i></div>
-                            </div>
+                    </div>
+                    <div class="form-group" id="login-password-group">
+                        <label for="login-input-password">Password</label>
+                        <div class="input-group">
+                            <input type="password" class="form-control" id="login-input-password" placeholder="&#149;&#149;&#149;&#149;&#149;&#149;&#149;&#149;">
+                            <div class="input-group-addon"><i class="fa fa-lock"></i></div>
                         </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox">
-                                Remember me
+                    </div>
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">
+                            Remember me
                        
-                            </label>
+                        </label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Log In</button>
+                    <a href="#" class="pull-right">Lost your password?</a>
+                </form>
+            </div>
+            <div class="col-sm-6">
+                <h1>Register</h1>
+                <h3>Do not have an account? Register here.</h3>
+                <form role="form" name="register-form" id="register-form">
+                    <div class="form-group" id="register-login-group">
+                        <label for="register-input-login">Choose Your Login</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="register-input-login" name="register-input-login" placeholder="Username">
+                            <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Log In</button>
-                        <a href="#" class="pull-right">Lost your password?</a>
-                    </form>
-                </div>
-                <div class="col-sm-6">
-                    <h1>Register</h1>
-                    <h3>Do not have an account? Register here.</h3>
-                    <form role="form" name="register-form" id="register-form">
-                        <div class="form-group" id="register-login-group">
-                            <label for="register-input-login">Choose Your Login</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" id="register-input-login" placeholder="Username">
-                                <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="register-input-password">Password</label>
+                        <div class="input-group">
+                            <input type="password" class="form-control" id="register-input-password" placeholder="Password">
+                            <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
-                        <div class="form-group" id="Div1">
-                            <label for="register-input-login">Password</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" id="Text1" placeholder="Password">
-                                <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                            </div>
+                    </div>
+                    <div class="form-group" id="Div2">
+                        <label for="register-input-confirmpassword">Confirm Password</label>
+                        <div class="input-group">
+                            <input type="password" class="form-control" id="register-input-confirmpassword" placeholder="Confirm Password">
+                            <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
-                        <div class="form-group" id="Div2">
-                            <label for="register-input-login">Confirm Password</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" id="Text2" placeholder="Confirm Password">
-                                <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                            </div>
+                    </div>
+                    <div class="form-group" id="register-email-group">
+                        <label for="register-input-email">Email</label>
+                        <div class="input-group">
+                            <input type="text" ng-pattern="emailPattern" class="form-control" id="register-input-email" name="register-input-email" placeholder="john.doe@gmail.com" />
+                            <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
                         </div>
-                        <div class="form-group" id="Div3">
-                            <label for="register-input-login">Gender</label>
-                            <div class="input-group">
-                                <select>
-                                    <option value="M">Male</option>
-                                    <option value="F">Female</option>
-                                </select>                                
-                                <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                            </div>
+                    </div>
+                    <div class="form-group" id="Div3">
+                        <label for="register-input-gender">Gender</label>
+                        <div class="input-group" id="register-input-gender">
+                            <select class="form-control">
+                                <option value="M">Male</option>
+                                <option value="F">Female</option>
+                            </select>
+                            <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
-                        <div class="form-group" id="Div4">
-                            <label for="register-input-login">Date Of Birth</label>
-                            <div class="input-group">
-                                <input type="text" ui-date ng-model="aDate">
-                                <input type="text" name="txtStartDate" data-datepicker-popup="MM-dd-yyyy" data-is-open="openedR1"
-                            data-datepicker-options="dateOptions" data-show-weeks="false" 
-                                    data-ng-required="true" 
-                                    maxlength="10" />
-                                <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                            </div>
-                        </div>
-                        <div class="form-group" id="register-email-group">
-                            <label for="register-input-email">Email</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" id="register-input-email" placeholder="john.doe@gmail.com">
-                                <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Register</button>
-                    </form>
-                </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Register</button>
+                </form>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- ========== CONTENT END ========== -->
-</div>
+<!-- ========== CONTENT END ========== -->
