--- a/Web/Partials/Login.html
+++ b/Web/Partials/Login.html
@@ -25,14 +25,14 @@
                     <div class="form-group" id="login-login-group">
                         <label for="login-input-login">Login</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" id="login-input-login" placeholder="Username or email">
+                            <input type="text" class="form-control" data-ng-model="userName" id="login-input-login" placeholder="Username or email">
                             <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
                     </div>
                     <div class="form-group" id="login-password-group">
                         <label for="login-input-password">Password</label>
                         <div class="input-group">
-                            <input type="password" class="form-control" id="login-input-password" placeholder="&#149;&#149;&#149;&#149;&#149;&#149;&#149;&#149;">
+                            <input type="password" class="form-control" data-ng-model="password" id="login-input-password" placeholder="&#149;&#149;&#149;&#149;&#149;&#149;&#149;&#149;">
                             <div class="input-group-addon"><i class="fa fa-lock"></i></div>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                        
                         </label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Log In</button>
+                    <button type="submit" class="btn btn-primary" ng-click="Login(userName,password)">Log In</button>
                     <a href="#" class="pull-right">Lost your password?</a>
                 </form>
             </div>
@@ -54,42 +54,42 @@
                     <div class="form-group" id="register-login-group">
                         <label for="register-input-login">Choose Your Login</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" id="register-input-login" name="register-input-login" placeholder="Username">
+                            <input type="text" class="form-control" data-ng-model="UserRegisteration.UserName" id="register-input-login" name="register-input-login" placeholder="Username">
                             <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="register-input-password">Password</label>
                         <div class="input-group">
-                            <input type="password" class="form-control" id="register-input-password" placeholder="Password">
+                            <input type="password" class="form-control" data-ng-model="UserRegisteration.Password" id="register-input-password" placeholder="Password">
                             <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
                     </div>
                     <div class="form-group" id="Div2">
                         <label for="register-input-confirmpassword">Confirm Password</label>
                         <div class="input-group">
-                            <input type="password" class="form-control" id="register-input-confirmpassword" placeholder="Confirm Password">
+                            <input type="password" class="form-control" data-ng-model="UserRegisteration.ConfirmPassword" id="register-input-confirmpassword" placeholder="Confirm Password">
                             <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
                     </div>
                     <div class="form-group" id="register-email-group">
                         <label for="register-input-email">Email</label>
                         <div class="input-group">
-                            <input type="text" ng-pattern="emailPattern" class="form-control" id="register-input-email" name="register-input-email" placeholder="john.doe@gmail.com" />
+                            <input type="text" ng-pattern="emailPattern" data-ng-model="UserRegisteration.EmailAddress" class="form-control" id="register-input-email" name="register-input-email" placeholder="john.doe@gmail.com" />
                             <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
                         </div>
                     </div>
                     <div class="form-group" id="Div3">
                         <label for="register-input-gender">Gender</label>
                         <div class="input-group" id="register-input-gender">
-                            <select class="form-control">
-                                <option value="M">Male</option>
-                                <option value="F">Female</option>
+                            <select class="form-control"  data-ng-model="UserRegisteration.Gender">
+                                <option value="1">Male</option>
+                                <option value="2">Female</option>
                             </select>
                             <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Register</button>
+                    <button type="submit" data-ng-click="SubmitRegisteration(UserRegisteration)" class="btn btn-primary">Register</button>
                 </form>
             </div>
         </div>
@@ -97,3 +97,4 @@
 </section>
 
 <!-- ========== CONTENT END ========== -->
+
