--- a/Web/Partials/Login.html
+++ b/Web/Partials/Login.html
@@ -72,6 +72,20 @@
                             <div class="input-group-addon"><i class="fa fa-user"></i></div>
                         </div>
                     </div>
+                    <div class="form-group" id="Div1">
+                        <label for="register-input-email">First Name</label>
+                        <div class="input-group">
+                            <input type="text" data-ng-model="UserRegisteration.FirstName" class="form-control" id="Text1" name="register-input-email" placeholder="First Name" />
+                            <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
+                        </div>
+                    </div>
+                    <div class="form-group" id="Div4">
+                        <label for="register-input-email">Last Name</label>
+                        <div class="input-group">
+                            <input type="text" data-ng-model="UserRegisteration.LastName" class="form-control" id="Text2" name="register-input-email" placeholder="Last Name" />
+                            <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
+                        </div>
+                    </div>
                     <div class="form-group" id="register-email-group">
                         <label for="register-input-email">Email</label>
                         <div class="input-group">
